# jamvm

./: .gitignore  CMakeLists.txt  Vagrantfile
src/: alloc.c  class.c  dll.c  excep.c  execute.c  hooks.c  init.c  jam.c  jam.h  natives.c  properties.c  resolve.c  string.c  thread.c
src/classlib/openjdk/: jvm.c
src/interp/: direct.c  inlining.c  inlining.h
src/interp/engine/: Makefile.am  interp-indirect.h  interp.c  interp.h  interp2.c
